hphp/hack/test/typecheck/localization/primary_error_pos_bug.php.exp
File "primary_error_pos_bug.php", line 9, characters 17-20:
Invalid type hint (Typing[4090])
  File "primary_error_pos_bug.php", line 9, characters 20-20:
  No type constant `T` in `A`
  File "primary_error_pos_bug.php", line 3, characters 7-7:
  Declaration of `A` is here
File "primary_error_pos_bug.php", line 11, characters 17-22:
Wrong number of type arguments (expected 0, got 1) (Typing[4101])
  File "primary_error_pos_bug.php", line 3, characters 7-7:
  Definition is here
File "primary_error_pos_bug.php", line 16, characters 29-29:
No type constant `T` in `A` (Typing[4090])
  File "primary_error_pos_bug.php", line 3, characters 7-7:
  Declaration of `A` is here
File "primary_error_pos_bug.php", line 18, characters 26-31:
Wrong number of type arguments (expected 0, got 1) (Typing[4101])
  File "primary_error_pos_bug.php", line 3, characters 7-7:
  Definition is here
File "primary_error_pos_bug.php", line 24, characters 29-32:
Some type arguments violate their constraints (Typing[4323])
  File "primary_error_pos_bug.php", line 5, characters 9-9:
  `T` is a constrained type parameter
  File "primary_error_pos_bug.php", line 5, characters 14-16:
  This type constraint is violated
  File "primary_error_pos_bug.php", line 5, characters 14-16:
  Expected `num`
  File "primary_error_pos_bug.php", line 24, characters 31-31:
  But got `T`
File "primary_error_pos_bug.php", line 32, characters 18-31:
Some type arguments violate their constraints (Typing[4323])
  File "primary_error_pos_bug.php", line 5, characters 9-9:
  `T` is a constrained type parameter
  File "primary_error_pos_bug.php", line 5, characters 14-16:
  This type constraint is violated
  File "primary_error_pos_bug.php", line 5, characters 14-16:
  Expected `num`
  File "primary_error_pos_bug.php", line 32, characters 25-30:
  But got `string`
  File "primary_error_pos_bug.php", line 27, characters 20-20:
    via this generic `T`
File "primary_error_pos_bug.php", line 32, characters 37-50:
Some type arguments violate their constraints (Typing[4323])
  File "primary_error_pos_bug.php", line 5, characters 9-9:
  `T` is a constrained type parameter
  File "primary_error_pos_bug.php", line 5, characters 14-16:
  This type constraint is violated
  File "primary_error_pos_bug.php", line 5, characters 14-16:
  Expected `num`
  File "primary_error_pos_bug.php", line 32, characters 44-49:
  But got `string`
  File "primary_error_pos_bug.php", line 29, characters 27-27:
    via this generic `T`
File "primary_error_pos_bug.php", line 38, characters 7-8:
Some type arguments violate their constraints (Typing[4323])
  File "primary_error_pos_bug.php", line 20, characters 22-22:
  `T` is a constrained type parameter
  File "primary_error_pos_bug.php", line 20, characters 27-29:
  This type constraint is violated
  File "primary_error_pos_bug.php", line 20, characters 27-29:
  Expected `num`
  File "primary_error_pos_bug.php", line 38, characters 10-15:
  But got `string`
File "primary_error_pos_bug.php", line 39, characters 7-8:
A `where` type constraint is violated here (Typing[4323])
  File "primary_error_pos_bug.php", line 22, characters 19-20:
  This is the method with `where` type constraints
  File "primary_error_pos_bug.php", line 22, characters 45-47:
  Expected `num`
  File "primary_error_pos_bug.php", line 39, characters 10-15:
  But got `string`
  File "primary_error_pos_bug.php", line 22, characters 40-40:
    via this generic `T`
File "primary_error_pos_bug.php", line 40, characters 7-7:
Some type arguments violate their constraints (Typing[4323])
  File "primary_error_pos_bug.php", line 5, characters 9-9:
  `T` is a constrained type parameter
  File "primary_error_pos_bug.php", line 5, characters 14-16:
  This type constraint is violated
  File "primary_error_pos_bug.php", line 5, characters 14-16:
  Expected `num`
  File "primary_error_pos_bug.php", line 40, characters 9-14:
  But got `string`
